Add Umami analytics script to Layout component

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -108,7 +108,7 @@ const bannerOffset =
 				  media={favicon.theme && `(prefers-color-scheme: ${favicon.theme})`}
 			/>
 		))}
-
+		<script is:inline defer src="https://umami.tinymeepletalk.com/script.js" data-website-id="37c0558c-e562-4fcd-aed6-5675feb89055"></script>
 		<!-- Set the theme before the page is rendered to avoid a flash -->
 		<script is:inline define:vars={{DEFAULT_THEME, LIGHT_MODE, DARK_MODE, AUTO_MODE, BANNER_HEIGHT_EXTEND, PAGE_WIDTH, configHue}}>
 			// Load the theme from local storage
