Refactor code structure for improved readability and maintainability

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,7 +79,7 @@ const bannerOffset =
 	<head>
 
 		<title>{pageTitle}</title>
-
+		<script defer src="https://umami.tinymeepletalk.com/script.js" data-website-id="37c0558c-e562-4fcd-aed6-5675feb89055"></script>
 		<meta charset="UTF-8" />
 		<meta name="description" content={description || pageTitle}>
 		<meta name="author" content={profileConfig.name}>
